changes to models

--- a/mysite/socialdist/static/socialdist/css/post.css
+++ b/mysite/socialdist/static/socialdist/css/post.css
@@ -23,7 +23,7 @@ input#id_contents{
 }
 
 
-select#id_access_level{
+select#id_visibility{
   margin-left: 20px;
   color:black;
     outline: none;
