--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -50,7 +50,7 @@
                     <em>
                       @<a href="{% url 'author_profile' post.created_by.id %}">{{ post.created_by.username }}</a>
                     </em>
-                    {{ post.contents | markdown |safe}}
+                    {{ post.description | markdown |safe}}
                     <small style="color:#add8e6 ">
 
                       {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
