--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -31,7 +31,7 @@
         <em>
           @<a href="{% url 'author_profile' post.created_by.id %}" style="color:#88e ">{{ post.created_by.username }}</a>
         </em>
-        {{ post.contents | markdown |safe}}
+        {{ post.description | markdown |safe}}
               <small style="color:#add8e6; font-family:calibri; padding-right:45px" >
                 {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
                 {{ likes_count }} likes
