--- a/mysite/socialdist/templates/socialdist/profile.html
+++ b/mysite/socialdist/templates/socialdist/profile.html
@@ -26,7 +26,7 @@
       </span>
       <div class="posts">
         {% for post in posts %}
-                  <p><em>@{{ post.created_by.username }}</em> {{ post.description }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
+                  <p><em>@{{ post.author.username }}</em> {{ post.description }} <em>{{ post.published|date:"SHORT_DATETIME_FORMAT" }}</em></p>
               {% endfor %}</div>
       </div>
 
