--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -30,12 +30,12 @@
     <div class="posts">
             <p>
               <em>
-                @<a href="{% url 'author_profile' post.created_by.id %}" style="color:#88e ">{{ post.created_by.username }}</a>
+                @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a>
               </em>
               {{ post.description | markdown |safe}}
               <small style="color:#add8e6; font-family:calibri; padding-right:45px" >
 
-                {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
+                {{ post.published|date:"SHORT_DATETIME_FORMAT" }}
                 {{ likes }} likes
 
             </small>
