--- a/mysite/socialdist/templates/socialdist/user_settings.html
+++ b/mysite/socialdist/templates/socialdist/user_settings.html
@@ -25,7 +25,7 @@
       User Settings
       </span>
       <p> <em> Username: </em> {{user.username}}
-        <p> <em> Github Link: </em> {{user.github_link}}
+        <p> <em> Github Link: </em> {{user.github}}
           <br>
           <form method = "post" enctype="multipart/form-data">
               {% csrf_token %}
