--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -48,7 +48,7 @@
 
       <br>
       <br>
-      
+
       <div class="col-md-6">
         {% for post, likes in posts.items %}
           <div class="posts">
@@ -57,6 +57,10 @@
                       @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a>
 
                     </em>
+                    {% if likes == -1 %}
+                    <span style="color:rgba(34, 167, 240, 1); font-size:1.3em; cursor:pointer" title="Post from another server: {{post.origin}}">☁</span>
+                    {% endif %}
+
                     {{ post.description | markdown |safe}}
                     <small style="color:#add8e6; font-family:calibri; padding-right:45px">
                       {{ post.published }}
