--- a/mysite/socialdist/static/socialdist/css/landing.css
+++ b/mysite/socialdist/static/socialdist/css/landing.css
@@ -15,18 +15,24 @@
 
 }
 
-p{
-    font-family: 'gotham-bold';
-}
+
 
 .pretty-bg{
-    background: linear-gradient(135deg, #813ec7, #d93d5c);
+    /* background: linear-gradient(135deg, #813ec7, #d93d5c); */
     width: 100%;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     color: black;
+}
+
+#particles-js{
+    background: linear-gradient(135deg, #813ec7, #d93d5c);
+    width: 100vw;
+    height: 100vh;
+    /* position: fixed; */
+
 }
 
 
@@ -103,7 +109,7 @@ p{
 
 a{
     text-decoration: none;
-    font-family: 'gotham-bold', 'times';
+    font-family: 'gotham-light', 'times';
   }
 
 .link-box
