--- a/mysite/socialdist/static/socialdist/css/signup.css
+++ b/mysite/socialdist/static/socialdist/css/signup.css
@@ -1,7 +1,4 @@
-*
-{
-  font-family: 'gotham-bold';
-}
+
 
 
 .signup{
@@ -66,7 +63,8 @@
   border-radius: 50px;
   text-align: center;
   font-size: 28px;
-  background-color: rgba(255,255,255,0.2);
+  background-color:rgba(130, 88, 159,1.0);
+  color:white;
   cursor: pointer;
 }
 
@@ -99,9 +97,9 @@
     border-radius: 50px;
     text-align: center;
     font-size: 28px;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255,255,255,0.2  );
     cursor: pointer;
 }
 .return:hover{
-  background-color: grey;
+  background-color: white;
 }
