--- a/mysite/socialdist/templates/registration/signup.html
+++ b/mysite/socialdist/templates/registration/signup.html
@@ -2,18 +2,22 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<div class='pretty-bg'>
-  <div class="hermes-na">Hermes</div>
+<div id="particles-js"></div>
+<div class="pretty-bg">
+
+
+    <div class="hermes-na">Hermes</div>
   <div class='big-marker-na'></div>
   <div class="friendly-reminder reminder-na"> your friendly neighbourhood social network </div>
 
   <div class="signup">
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{form.as_p}}
     <div class="button_nav">
+      <a href="{% url 'index' %}"><div class="return" style="margin-right:30px">Return</div></a>
     <button type="submit">Sign Up</button>
-    <div class="return"><a href="{% url 'index' %}">Return</a></div>
+
   </div>
   </form>
 
