--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -17,6 +17,7 @@
 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/landing.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/particles.min.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/dropdown.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/autoExpandText.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/followToggle.js' %}"></script>
@@ -24,6 +25,12 @@
      <script type="text/javascript" src="{% static 'socialdist/js/unfriendToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/likeToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/unlikeToggle.js' %}"></script>
+
+     <script>
+           particlesJS.load('particles-js', '{% static 'socialdist/js/particles.json' %}', function(){
+               console.log('particles.json loaded...');
+           });
+       </script>
 
   </head>
   <body>
