fixed sidebar links

--- a/mysite/socialdist/templates/socialdist/followers.html
+++ b/mysite/socialdist/templates/socialdist/followers.html
@@ -8,14 +8,18 @@
   <div class="name">Welcome back <br> <span>{{user.username}}</span></div><br><br><br>
   <div class = "sidebar-links">
     <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a>
+    <br>
+    <a class="mini-links" href="{% url 'feed' %}"> Feed </a>
+    <br>
+    <a class="mini-links" href="{% url 'author_profile' user.id %}"> Profile </a>
+    <br>
+    <a class="mini-links" href="{% url 'unlisted_posts' %}"> Unlisted </a>
+    <br>
+    <a class="mini-links" href="{% url 'followers' user.id %}"> Followers </a>
+    <br>
 
-  <p><a class="mini-links" href="{% url 'feed' %}"> Feed </a></p>
-    <a class="mini-links"href="{% url 'author_profile' user.id %}"> Profile </a><br>
-    <p><a class="mini-links" href= "#"> Unlisted </a>  </p>
-  <a class="mini-links"href="{% url 'followers' user.id %}"> Followers </a><br>
-
-  <a class="mini-links"href="{% url 'user_settings' %}"> Settings </a><br>
-  <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
+    <a class="mini-links" href="{% url 'user_settings' %}"> Settings </a><br>
+    <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
 
   </div>
 
