--- a/mysite/socialdist/templates/socialdist/create_post.html
+++ b/mysite/socialdist/templates/socialdist/create_post.html
@@ -1,35 +1,5 @@
 {% extends 'socialdist/base.html' %} {% block title %}Post{% endblock %} {%block content %} {% load bootstrap4 %}
 
-<!-- from Ahmet Aksungur (https://codepen.io/ahmetaksungur) at https://codepen.io/ahmetaksungur/pen/MWaVxyd  -->
-<!-- <form method="post">
-{% csrf_token %}
-{{ form.as_p }}
-<label class="ui-form-input-container">
-  <div class="outer-container">
-<textarea class="ui-form-input" placeholder="How are you doing today?">
-</textarea>
-<div class="button-div">
-  <div class="switch">
-<input id="switch-it" type="checkbox" class="switch-input" />
-<label for="switch-it" class="switch-label"></label>
-  </div>
-  Unlisted Post
-  <div class="dropdown">
-<button onclick="privacy_controls()" class="dropbtn">&#x2699 Post Privacy</button>
-<div id="myDropdown" class="dropdown-content">
-<a href="#">Public</a>
-<a href="#">Friends</a>
-<a href="#">Only Me</a>
-</div>
-</div>
-  <button class="submitbtn" type="submit"> Submit </button>
-
-</div>
-  </div>
-
-</label>
-</form> -->
-
 <div class="fade-bg">
   <div class="sidebar">
     <div class="photo"></div>
@@ -40,17 +10,17 @@
     <br /><br /><br />
     <div class="sidebar-links">
       <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a>
+      <br>
+      <a class="mini-links" href="{% url 'feed' %}"> Feed </a>
+      <br>
+      <a class="mini-links" href="{% url 'author_profile' user.id %}"> Profile </a>
+      <br>
+      <a class="mini-links" href="{% url 'unlisted_posts' %}"> Unlisted </a>
+      <br>
+      <a class="mini-links" href="{% url 'followers' user.id %}"> Followers </a>
+      <br>
 
-      <p><a class="mini-links" href="{% url 'feed' %}"> Feed </a></p>
-      <a class="mini-links" href="{% url 'author_profile' user.id %}">
-        Profile </a
-      ><br />
-      <p><a class="mini-links" href="#"> Unlisted </a></p>
-      <a class="mini-links" href="{% url 'followers' user.id %}"> Followers </a
-      ><br />
-
-      <a class="mini-links" href="{% url 'user_settings' %}"> Settings </a
-      ><br />
+      <a class="mini-links" href="{% url 'user_settings' %}"> Settings </a><br>
       <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
     </div>
   </div>
