Backend stuff about friends.

--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -18,7 +18,7 @@
     <br>
     <a class="mini-links" href="{% url 'unlisted_posts' %}"> Unlisted </a>
     <br>
-    <a class="mini-links" href="{% url 'followers' user.id %}"> Followers </a>
+    <a class="mini-links" href="{% url 'friends' user.id %}"> Friends </a>
     <br>
 
     <a class="mini-links" href="{% url 'user_settings' %}"> Settings </a><br>
@@ -34,18 +34,14 @@
       </span>
       <br>
       {% if origin == 'host' %}
-    Followers: <a href="/author/{{author_id}}}}/followers/">{{followers_count}}</a>
+    Friends: <a href="/author/{{author_id}}}}/friends/">{{friends_count}}</a>
     <br>
     <br>
       {% if request.user.username != author %}
-        {% if not following %}
-          <a href="/follow/{{author_id}}/"><input onclick="followToggle()" type="button" value="+ Follow" id="follow-button"></input></a> <br> <br>
+        {% if not friend_status %}
+          <a href="/send_friend_request/{{author_id}}/"><input onclick="friendToggle()" type="button" value="+ Send friend request" id="friend-bfolloutton"></input></a> <br> <br>
         {% else %}
-          {% if not friends %}
-            <a href="/unfollow/{{author_id}}/"><input onclick="unfollowToggle()" type="button" value="✓ Following" id="unfollow-button"></input></a> <br> <br>
-          {% else %}
-            <a href="/unfollow/{{author_id}}/"><input onclick="unfriendToggle()" type="button" value=">< Friends" id="unfriend-button"></input></a> <br> <br>
-          {% endif %}
+          <a href="/unfriend/{{author_id}}/"><input onclick="unfriendToggle()" type="button" value=">< Friends" id="unfriend-button"></input></a> <br> <br>
         {% endif %}
       {% endif %}
       {% endif %}
