--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -19,7 +19,7 @@
     <br>
     <a class="mini-links" href="{% url 'unlisted_posts' %}"> Unlisted </a>
     <br>
-    <a class="mini-links" href="{% url 'followers' user.id %}"> Followers </a>
+    <a class="mini-links" href="{% url 'friends' user.id %}"> Friends </a>
     <br>
     <a class="mini-links" href="{% url 'user_settings' %}"> Settings </a><br>
     <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
