--- a/mysite/socialdist/templates/socialdist/friends.html
+++ b/mysite/socialdist/templates/socialdist/friends.html
@@ -15,7 +15,7 @@
     <br>
     <a class="mini-links" href="{% url 'unlisted_posts' %}"> Unlisted </a>
     <br>
-    <a class="mini-links" href="{% url 'followers' user.id %}"> Followers </a>
+    <a class="mini-links" href="{% url 'friends' user.id %}"> Friends </a>
     <br>
 
     <a class="mini-links" href="{% url 'user_settings' %}"> Settings </a><br>
@@ -26,18 +26,18 @@
   </div>
 
   <div class="feed-section">
-    <span>{{author}}'s Followers</span>
+    <span>{{author}}'s Friends</span>
     <br>
     <br>
 
 
 
 <div class="posts col-md-6">
-  {% if not followers%}
-  No followers yet!
+  {% if not friends %}
+  No friends yet!
   {%endif%}
-  {% for follower in followers %}
-            <p><em>@<a href="{% url 'author_profile' follower.id %}">{{ follower.username }}</a></em></p>
+  {% for friend in friends %}
+            <p><em>@<a href="{% url 'author_profile' friend.id %}">{{ friend.username }}</a></em></p>
         {% endfor %}</div>
 </div>
 
