--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -24,6 +24,8 @@
      <script type="text/javascript" src="{% static 'socialdist/js/unfriendToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/likeToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/unlikeToggle.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/acceptRequestToggle.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/rejectRequestToggle.js' %}"></script>
 
      <script>
            particlesJS.load('particles-js', '{% static 'socialdist/js/particles.json' %}', function(){
