--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -26,6 +26,9 @@
      <script type="text/javascript" src="{% static 'socialdist/js/unlikeToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/acceptRequestToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/rejectRequestToggle.js' %}"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
      <script>
            particlesJS.load('particles-js', '{% static 'socialdist/js/particles.json' %}', function(){
