--- a/mysite/socialdist/static/socialdist/css/feed.css
+++ b/mysite/socialdist/static/socialdist/css/feed.css
@@ -147,4 +147,24 @@ input#id_comment{
   border-radius: 10px 5px 5px 10px;
   margin-bottom: 5%;
   padding-bottom: 4%;
+
+}
+.sidebar-right
+{
+  height:100vh;
+  width: 25%;
+  color:#D0B7D8;
+  position: fixed;
+  background: linear-gradient(180deg, #B33771, #3B3B98);
+  float: right;
+  z-index: 1;
+  right: 0;
+  overflow-y: scroll;
+}
+.sidebar-right-links{
+  height: auto;
+  margin-left: 10%;
+  width: 100%;
+  margin-right: 10%;
+  font-size: 15px;
 }
