Added friends feed for friends only posts.

--- a/mysite/socialdist/templates/socialdist/friends_feed.html
+++ b/mysite/socialdist/templates/socialdist/friends_feed.html
@@ -1,5 +1,5 @@
 {% extends 'socialdist/base.html' %}
-{% block title %}Feed{% endblock %}
+{% block title %}Friends Feed{% endblock %}
 {% load markdown_extras %}
 {% load base %} 
 {% block content %}
