--- a/mysite/socialdist/templates/socialdist/user_settings.html
+++ b/mysite/socialdist/templates/socialdist/user_settings.html
@@ -10,6 +10,8 @@
     <br>
     <a class="mini-links" href="{% url 'feed' %}"> Feed </a>
     <br>
+    <a class="mini-links" href="{% url 'friends_feed' %}"> Friends Feed </a>
+    <br>
     <a class="mini-links" href="{% url 'author_profile' user.id %}"> Profile </a>
     <br>
     <a class="mini-links" href="{% url 'unlisted_posts' %}"> Unlisted </a>
