--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -72,7 +72,7 @@
    {% endif %}
            </div>
            {% if request.user == post.author%}
-           <input class="btn btn-primary" type="button" value = "✎ Edit" id = "editButton" data = "{{post.id}}"></input>
+           <input class="btn btn-primary" type="button" value = "✎ Edit" id = "editButton" data = "{{post.id}}" url = "{% url 'edit_post' %}" type="{{post.categories}}"></input>
            <a href="{% url 'delete_post' post.id %}">
              <input class="btn btn-primary" type="button" value = "🗑 Delete" ></input>
            </a>
