--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -30,7 +30,6 @@
 
   </div>
 
-
   <div class="feed-section">
     <div class="friend_request_section" id="accordion">
       <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#requests">Friend Requests: {{friend_requests|length}}</button>
@@ -85,7 +84,7 @@
             </small>
           {% if likes >= 0 %}
           <small style="color:#add8e6; font-family:calibri; padding-right:45px">
-            {{ likes }} likes
+            <span id='likes-{{post.id}}'>{{ likes }}</span> likes
           </small>
           <a href="{% url 'view_post' post.id %}">
             <div class="btn btn-primary">🗩 Comments</div>
@@ -93,27 +92,19 @@
 
 
           {% if not post_liked|get_item:post %}
-          <a href="/like/{{post.id}}/">
-            <input onclick="likeToggle()" type="button" value="❤ Like" id="like-button" class="btn btn-primary"></input>
-          </a>
+            <input onclick="likeToggle('{{post.id}}')" type="button" value="❤ Like" id="like-button-{{post.id}}" class="btn btn-primary" url="{%url 'like' post.id %}" data="{{post.id}}"></input>
           {% else %}
-
-
-
-          <a href="/unlike/{{post.id}}/">
-            <input onclick="unlikeToggle()" type="button" value="❤ Liked" id="unlike-button"
-              class="btn btn-primary"></input>
-          </a>
+            <input onclick="unlikeToggle('{{post.id}}')" type="button" value="❤ Liked" id="unlike-button-{{post.id}}"
+              class="btn btn-primary" url="{% url 'unlike' post.id %}" data="{{post.id}}"></input>
           {% endif %}
           {% if not post_shared|get_item:post %}
-          <a href="/share/{{post.id}}/">
-            <input onclick="shareToggle()" type="button" value="🚀 Share" id="share-button"
-              class="btn btn-primary"></input> </a>
+
+            <input onclick="shareToggle('{{post.id}}')" type="button" value="🚀 Share" id="share-button-{{post.id}}"
+              class="btn btn-primary" url="{% url 'share' post.id %}"></input>
           {% else %}
-          <a href="/unshare/{{post.id}}/">
-            <input onclick="unshareToggle()" type="button" value="🚀 Shared" id="share-button"
-              class="btn btn-primary"></input>
-          </a>
+            <input onclick="unshareToggle('{{post.id}}')" type="button" value="🚀 Shared" id="unshare-button-{{post.id}}"
+              class="btn btn-primary" url="{% url 'unshare' post.id %}"></input>
+
           {% endif %}
           {% endif %}
       </div>
