--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -1,6 +1,6 @@
 {% extends 'socialdist/base.html' %}
 {% block title %} {{author}}'s Profile{% endblock %}
-
+{% load base %}
 {% load markdown_extras %}
 {% load templatefilter %}
 
@@ -66,8 +66,24 @@
                     {% if likes == -1 %}
                     <span style="color:rgba(34, 167, 240, 1); font-size:1.3em; cursor:pointer" title="Post from another server: {{post.origin}}">☁</span>
                     {% endif %}
-
-                    {{ post.description | markdown |safe}}
+                    {% if post.categories == 'text/markdown' %}
+                      <span class = "post" style="color:black; background-color: blueviolet;">{{ post.description | custom_markdown }}</span>
+                    {% endif %}
+                    {% if post.categories == 'image/png' %}
+                      <br>
+                      <img style="max-width: 800px; max-height: 600px;" src="data:image/png;base64,{{ post.description }}">
+                      <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+                      <br>
+                    {% endif %}
+                    {% if post.categories == 'image/jpeg' %}
+                      <br>
+                      <img style="max-width: 800px; max-height: 600px;" src="data:image/jpeg;base64,{{ post.description }}">
+                      <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+                      <br>
+                    {% endif %}
+                    {% if post.categories == 'text/plain' %}
+                      <div style="font-family:Gotham-Light; font-size:0.7em">{{ post.description  }}</div>
+                    {% endif %}
                     <small style="color:#add8e6; font-family:calibri; padding-right:45px">
                       {{ post.published }}
                     </small>
