--- a/mysite/socialdist/templates/socialdist/unlisted.html
+++ b/mysite/socialdist/templates/socialdist/unlisted.html
@@ -1,5 +1,6 @@
 {% extends 'socialdist/base.html' %}
 {% block title %}Feed{% endblock %}
+{% load base %}
 {% load markdown_extras %}
 {% block content %}
 <div class='fade-bg'>
@@ -38,7 +39,24 @@
               <em>
                 @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a>
               </em>
-              {{ post.description | markdown |safe}}
+              {% if post.categories == 'text/markdown' %}
+                <span class = "post" style="color:black; background-color: blueviolet;">{{ post.description | custom_markdown }}</span>
+              {% endif %}
+              {% if post.categories == 'image/png' %}
+                <br>
+                <img style="max-width: 800px; max-height: 600px;" src="data:image/png;base64,{{ post.description }}">
+                <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+                <br>
+              {% endif %}
+              {% if post.categories == 'image/jpeg' %}
+                <br>
+                <img style="max-width: 800px; max-height: 600px;" src="data:image/jpeg;base64,{{ post.description }}">
+                <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+                <br>
+              {% endif %}
+              {% if post.categories == 'text/plain' %}
+                <div style="font-family:Gotham-Light; font-size:0.7em">{{ post.description  }}</div>
+              {% endif %}
               <small style="color:#add8e6; font-family:calibri; padding-right:45px" >
 
                 {{ post.published|date:"SHORT_DATETIME_FORMAT" }}
