fixed view post

--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -1,6 +1,7 @@
 {% extends 'socialdist/base.html' %}
 {% block title %}Feed{% endblock %}
-{% load markdown_extras%}
+{% load markdown_extras %}
+{% load base %}
 {% load templatefilter%}
 
 
@@ -37,18 +38,24 @@
           @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a>
         </em></p>
         <span class ="post-title">{{post.title}}</span>
-       {% if post.categories == 'text/markdown' %}
-        <span class = "post editable_text" style="color:black; background-color: blueviolet;">{{ post.description | markdown |safe}}</span>
-      {% endif %}
-      {% if post.categories == 'text/image' %}
-        <br>
-        <span class ="editable_text"><img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/></span>
-        <br>
-      {% else %}
-        <br>
-        <span class ="editable_text">{{post.description}}</span>
-        <br>
-      {% endif %}
+        {% if post.categories == 'text/markdown' %}
+          <span class = "post" style="color:black; background-color: blueviolet;">{{ post.description | custom_markdown }}</span>
+        {% endif %}
+        {% if post.categories == 'image/png' %}
+          <br>
+          <img style="max-width: 800px; max-height: 600px;" src="data:image/png;base64,{{ post.description }}">
+          <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+          <br>
+        {% endif %}
+        {% if post.categories == 'image/jpeg' %}
+          <br>
+          <img style="max-width: 800px; max-height: 600px;" src="data:image/jpeg;base64,{{ post.description }}">
+          <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+          <br>
+        {% endif %}
+        {% if post.categories == 'text/plain' %}
+          <div style="font-family:Gotham-Light; font-size:0.7em">{{ post.description  }}</div>
+        {% endif %}
               <small style="color:#add8e6; font-family:calibri; padding-right:45px" >
                 {{ post.published|date:"SHORT_DATETIME_FORMAT" }}
                 {{ likes_count }} likes
